--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -139,7 +139,7 @@
 </main>
 
 
-<section class="pb-8 pb-md-11 bg-dark" style='padding-top: 6rem;'>
+<section class="pb-md-11 bg-dark" style='padding-top: 6rem; padding-bottom: 6rem;'>
   <div class="container-md">
     <div class="row flex-column justify-content-between align-items-center">
       <h2 class="comment-event-header mb-4" style="font-size: 3rem; color: white;">Questions about the event?</h2>
