--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,21 +9,21 @@
     <ul class="navbar-nav mr-auto">
       <% if !user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Partner with us", events_path, class: "nav-link" %>
+          <%= link_to "Partner with us", events_path, class: "nav-link text-white" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link text-white" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Login", new_user_session_path, class: "nav-link text-white" %>
         </li>
       <% end %>
       <% if user_signed_in? %>
         <li class="nav-item nav-inline-block">
-          <%= link_to "Browse events", events_path, class: "nav-link" %>
+          <%= link_to "Browse events", events_path, class: "nav-link text-white" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Host event", new_event_path, class: "nav-link" %>
+        <li class="nav-item text-white">
+          <%= link_to "Host event", new_event_path, class: "nav-link text-white" %>
         </li>
         <li class="nav-item dropdown">
           <% if current_user.image.attached? %>
