sticky map for events#index

--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -109,6 +109,10 @@ body {
   box-shadow: $standard-shadow;
   height: 100vh;
   position: sticky;
+  top: 87px;
+  #map {
+    height: 86vh;
+  }
 }
 
 .card-body {
